--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "globals": "^15.12.0",
     "html-webpack-plugin": "^5.6.3",
     "postcss": "^8.4.49",
+    "serve": "^14.2.4",
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.1",
     "webpack": "^5.97.1",
