--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "express": "^4.21.2",
     "mongoose": "^8.9.5",
+    "mysql2": "^3.12.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
