--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "express": "^4.21.2",
     "framer-motion": "^12.4.2",
+    "jwt-decode": "^3.1.2",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.9.5",
     "mysql2": "^3.12.0",
